# DIY-Welding-Positioner-ESP32-P4

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIY-Welding-Positioner-ESP32-P4_UI_logic_function_improvements.md  DIY-Welding-Positioner-ESP32-P4_bug_logic_analysis.md  LICENSE  PROCESS_ANALYSIS.md  README.md  SECURITY.md  STATUS.md  TASKSold.md  default_16MB.csv  idf_component.yml  install.sh  platformio.ini  sdkconfig.defaults
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  hardware_wiring.yml
.github/workflows/: pio-build.yml  release.yml
docs/: CODERABBIT_PR_TEMPLATE_TEST.md  CODERABBIT_SMOKE_TEST.md  EMI_MITIGATION.md  FUTURE_ARCHITECTURE.md  HARDWARE_SETUP.md  INSTRUCTABLES.md  PROJECT_IMPLEMENTATION.md  SAFETY_SYSTEM.md  WIFI_REMOTE_PLAN.md  emi_test.md  estop_timing.md  load_test.md
docs/wifi_demo/: index.html
githooks/: commit-msg
lib/: lv_conf.h
scripts/: fix_platformio_extensions.ps1  fix_platformio_for_cursor.ps1  gen_worm_svg_gears.py  make_social_preview.py  pio_pre_unique_bin.py  scale.py
simulator/: CMakeLists.txt  README.md  lv_conf.h  main.cpp  run.ps1  sim_stubs.cpp  usb_mirror_viewer.cpp
simulator/stubs/: Arduino.h  FastAccelStepper.h  esp_err.h  esp_heap_caps.h  esp_lcd_mipi_dsi.h  esp_lcd_panel_ops.h  esp_lcd_touch.h  esp_system.h
simulator/stubs/driver/: i2c_master.h
simulator/stubs/freertos/: FreeRTOS.h
src/: app_state.cpp  app_state.h  config.h  event_log.cpp  event_log.h  idf_component.yml  main.cpp  onchip_temp.cpp  onchip_temp.h
src/ble/: ble.cpp  ble.h
src/control/: control.cpp  control.h  modes.h  program_executor.cpp  program_executor.h  test_logic.h
src/mirror/: usb_mirror.cpp  usb_mirror.h  usb_mirror_protocol.h
src/motor/: acceleration.cpp  acceleration.h  calibration.cpp  calibration.h  microstep.cpp  microstep.h  motor.cpp  motor.h  speed.cpp  speed.h  test_speed_logic.h
src/safety/: safety.cpp  safety.h
src/storage/: storage.cpp  storage.h  test_storage_logic.h
src/ui/: display.cpp  display.h  lvgl_hal.cpp  lvgl_hal.h  screens.cpp  screens.h  test_hal_logic.h  test_screen_logic.h  theme.cpp  theme.h
test/: README.md
test/test_device_gpio/: test_main.cpp
wiki/: Architecture.md  Getting-Started.md  Hardware-Setup.md  Home.md  Roadmap.md  Troubleshooting.md
(+38 files in other folders)
